syntax = "proto3";

package app.grpc.enterprise;

option java_generic_services = true;
option java_package = "net.coding.e.proto";
option java_outer_classname = "UserRoleProto";

message UserRole {
    int32 id = 1;
    int32 team_id = 2;
    string name = 3;
    string email = 4;
    string phone = 5;
    int32 status = 6;
    string avatar = 7;
    string role_type = 8;
    string role_name = 9;
    string permission_function = 10;
}

message UserRoleResponse {
    int32 code = 1;
    string msg = 2;
    repeated UserRole data = 3;
}

message UserGroupToSpinnaker {
    string roles = 1;
}

message UserGroupToSpinnakerResponse {
    int32 code = 1;
    string msg = 2;
    repeated UserGroupToSpinnaker data = 3;
}

message GetUserRoleByIdRequest {
    int32 user_id = 1;
}

message GetUserRoleByGKRequest {
    string user_gk = 1;
}

service UserRoleService {
    rpc getRoleById (GetUserRoleByIdRequest) returns (UserRoleResponse);
    rpc getUserGroupToSpinnakerRole (GetUserRoleByIdRequest) returns (UserGroupToSpinnakerResponse);
    rpc getUserGroupToSpinnakerRoleByGK (GetUserRoleByGKRequest) returns (UserGroupToSpinnakerResponse);
}